--- a/Lecture_1.ipynb
+++ b/Lecture_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPo/AS8txIT/6ANWmgT1EYj",
+      "authorship_tag": "ABX9TyMMvpYNSimaDkKjID2CU1EF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 89,
       "metadata": {
         "id": "nnNnpcQMjNZc"
       },
@@ -46,7 +46,8 @@
         "import numpy as np\n",
         "from scipy.stats import norm\n",
         "from scipy.stats import uniform\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd"
       ]
     },
     {
@@ -62,8 +63,8 @@
       "cell_type": "code",
       "source": [
         "f = lambda x : np.cos(x) / (1 + x ** 2)\n",
-        "\n",
         "N = 1000000\n",
+        "\n",
         "w = np.random.uniform(0, 1, N)\n",
         "I_N = sum(f(w)) / N\n",
         "S_N = np.sqrt(sum((lambda x : f(x) ** 2)(w)) / N - I_N ** 2)\n",
@@ -75,15 +76,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jwv7quWyHoHQ",
-        "outputId": "1c4e1d6e-4fce-435c-93fb-7b1224810230"
+        "outputId": "7838e53a-0d4b-4410-e2dd-51d16d7f08a1"
       },
-      "execution_count": 80,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.6830092218199474 \t 0.0007067277115810858\n"
+            "0.6828539178529018 \t 0.0007071814912016902\n"
           ]
         }
       ]
@@ -124,7 +125,7 @@
         "id": "xvwpne7lORuf",
         "outputId": "7b2bbbec-f3d7-4e30-bdde-12092dbaf250"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +165,7 @@
         "\n",
         "w = np.random.normal(0, 1, N)\n",
         "hsigma = sum((lambda x : (f(x)/g(x)) ** 2)(w)) / N\n",
-        "print(\"Estimated sigma: \", S_N)\n",
+        "print(\"Estimated sigma: \", hsigma)\n",
         "\n",
         "x = np.linspace(-3, 3, 100)\n",
         "plt.plot(x, g(x), label='Normal(0, 1)')\n",
@@ -178,15 +179,15 @@
           "height": 448
         },
         "id": "9SAc7zzeSE3r",
-        "outputId": "19c948ae-25d2-4a0c-a882-5bc9f1608ca0"
+        "outputId": "ecdf1dab-e0c5-4c06-82ac-1d1acfe5f887"
       },
-      "execution_count": 62,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Estimated sigma:  637422.2003167135\n"
+            "Estimated sigma:  117741.64426404942\n"
           ]
         },
         {
@@ -241,7 +242,7 @@
         "id": "kOEsyDvEz0Wv",
         "outputId": "6ec1c3c7-399b-4c07-809a-6fc72b161aea"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
